[package]
name = "ok-compiler"
version = "0.1.0"
authors = ["Dan Davison <dandavison7@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "^0.12.1"
bitflags = "1.2.1"
bit-set = "0.5.2"
bytelines = "2.2.2"
cansi = "2.0.0"
lazy_static = "1.4"
regex = "1.3.9"
structopt = "0.3.14"
syntect = "3.2"
termbg = "0.2.0"
unicode-segmentation = "1.3.0"